# symconf

./: HOWTO.md  IMPLEMENTATION_REPORT.md  README.md  debug_test.py  demo.ipynb  pyproject.toml  verify_behavior.py  yaml.ipynb
.github/prompts/: hdd.prompt.md
demos/: twinconf_demo.ipynb
features/: conf.feature  note.md  object.md
features/cli/2. help/object/: class.feature
features/cli/3. parse/: validation.feature
features/construct_configuration/: create_configuration.feature  variable_interpolation.feature
src/symconf/: __init__.py  config.py  exceptions.py  interpolation.py  parameter_tracer.py  parser.py  utils.py  validation.py
src/synconf/: __init__.py  config.py  exceptions.py  interpolation.py  parameter_tracer.py  parser.py  utils.py  validation.py
src/twinconf/: __init__.py  config.py  parser.py  utils.py
tests/: __init__.py  conftest.py  test_basic_config.py  test_configuration_building.py  test_configuration_object.py  test_configuration_object_operations.py  test_core.py  test_enhanced_interpolation.py  test_file_parsing.py  test_getting_help.py  test_interpolation.py  test_list_manipulation.py  test_objects.py  test_parameter_sweeping.py  test_parameter_traversal.py  test_realization.py  test_sweeping.py  test_validation.py
tests/data/: __init__.py  completion.py  config1.yaml  config2.yaml  config_interpolation.yaml  config_objects.yaml  kwargs_chain.py  mapping.py  realization.py  test.env  validation.py
