[project]
name = "twinconf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "richarddwang", email = "richardyy1188@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
twinconf = "twinconf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "ailab-gitlab"
url = "http://10.11.60.1:8287/api/v4/groups/22/-/packages/pypi/simple"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
